--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "clsx": "^2.0.0",
     "lucide-react": "^0.293.0",
     "next": "13.5.6",
