--- a/package.json
+++ b/package.json
@@ -6,22 +6,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "clsx": "^2.0.0",
     "lucide-react": "^0.293.0",
-    "next": "13.5.6",
+    "next": "13.4.10",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@rocketseat/eslint-config": "^2.1.0",
     "@testing-library/jest-dom": "^6.1.6",
     "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
